--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
   <head>
   </head>
-  <title> Welcome </title>
+  <title> Welcome to my website! </title>
+  <h1>Paul Hohbaum</h1>
+  
 </html>
