--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+      <link href="style.css" type="text/css" rel="stylesheet" />  
   </head>
-  <title> Welcome to my website! </title>
+    
+  <title> Paul Hohbaum Github </title>
+    
   <h1>Paul Hohbaum</h1>
   
 </html>
